Enhance NovaEco documentation and use cases
- Updated NovaHub description to include "orchestrator" functionality in architecture deep dive.
- Revised horizontal enablers and vertical sectors in welcome page for clarity and consistency.
- Improved NovaHub's role in resource matching and project decomposition in use cases.
- Clarified user interactions and ecosystem usage across various use cases, emphasizing NovaHub's capabilities.
- Updated index page to reflect NovaHub as an "Innovation Wizard" for better understanding of its purpose.

--- a/website/blog/2025-11-25-welcome.md
+++ b/website/blog/2025-11-25-welcome.md
@@ -14,7 +14,7 @@ tags: [introduction, novaeco, circular-economy]
 We are excited to launch the **NovaEco** documentation and blog at [novaeco.tech](https://novaeco.tech).
 
 NovaEco is the **open‑source operating system for the circular economy**.  
-Our mission is to connect **horizontal enablers** (Identity, Finance, Policy, Hub, Balance, Equity) with **vertical sectors** (Agro, Waste, Build, Textile, Health, Energy, Water, Air) to create a transparent, auditable, and collaborative ecosystem.
+Our mission is to connect **horizontal enablers** (NovaFin, NovaPolicy, NovaHub, NovaBalance, NovaEquity) with **vertical sectors** (NovaAgro, NovaWaste, NovaBuild, NovaTextile, NovaHealth, NovaEnergy, NovaWater, NovaAir) to create a transparent, auditable, and collaborative ecosystem.
 
 ---
 
